# rci_interface

./: .gitmodules  go.mod  go.sum  rci_interface.ino
client/: setup.py
client/rci/: client.py  stellarium.py
cmd/modbus_server/: main.go
cmd/radar/: radar.go  rotctld.go  server.go
cmd/radar/terminal/: terminal.go
cmd/radar_logger/: logger.go
cps20/: cps20.go  cps20.ino
easycomm/: easycomm.go  easycomm_test.go  protocol.md  simulator.go
easycomm/internal/status/: status.go
easycomm/simulator/: simulator.go
gr-w1xm/: CMakeLists.txt  MANIFEST.md  sky_scan.grc
gr-w1xm/cmake/Modules/: w1xmConfig.cmake
gr-w1xm/docs/: README.w1xm
gr-w1xm/docs/doxygen/: Doxyfile.in
gr-w1xm/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-w1xm/grc/: CMakeLists.txt  w1xm_pos_max_hold_fvf.xml
gr-w1xm/include/w1xm/: CMakeLists.txt  api.h
gr-w1xm/lib/: CMakeLists.txt  qa_w1xm.cc  qa_w1xm.h  test_w1xm.cc
gr-w1xm/python/: CMakeLists.txt  __init__.py  pos_max_hold_fvf.py  pos_max_hold_fvf.py~
gr-w1xm/swig/: CMakeLists.txt  w1xm_swig.i
internal/modbus/: modbus.go
rci/: offset.go  rci.go
rotator/: rotator.go  transform.go
sequencer/: sequencer.go
sequencer/modbushttp/: modbushttp.go
sequencer/sequencer/: sequencer.ino
static/: app.css  app.js  components.js  dashboard.html  index.html  posvel.html  widgets.js
static/widgets/: pano.html
w1xm_cps20/: w1xm_cps20.ino
